# peluditOs

./: Cargo.toml  Justfile  README.md  link.ld  protected_mode.json  rust-toolchain.toml
.cargo/: config.toml
crates/boot/: Cargo.toml  Justfile  README.md  build.rs  link.ld
crates/boot/src/: boot.rs  compat_mode.rs  gdt.rs  long_mode_setup.rs  main.rs  paging.rs  stack.rs
crates/graphics/: Cargo.toml  README.md
crates/graphics/src/: lib.rs  vga.rs  write.rs
crates/long-mode/: Cargo.toml  Justfile  README.md
crates/long-mode/src/: main.rs
iso/: iso
iso/EFI/BOOT/: BOOTX64.EFI
iso/boot/: peluditOS
iso/limine/: limine-bios.sys  limine.conf
src/: main.rs
