[workspace]
name = "peluditOS"
version = "0.1.0"
edition = "2024"

# Define workspace members
members = [
    "crates/boot",
    "crates/graphics"
]

[workspace.dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0" }
pelu_graphics = { path = "crates/graphics" }
