[workspace]
name = "peluditOS"
version = "0.1.0"
edition = "2024"
resolver = "3"

# Define workspace members
members = [
    "crates/boot",
    "crates/graphics",
    "crates/long-mode"
]

[workspace.dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0" }
pelu-graphics = { path = "crates/graphics" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"